# syntax_highlighting

./: README.md  package.json  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
syntax_highlighting/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  Untitled.ipynb  package.json  pyproject.toml
syntax_highlighting/.github/workflows/: build.yml  check-release.yml
syntax_highlighting/src/: index.ts
syntax_highlighting/syntax_highlighting/: __init__.py
